@@ -27,6 +27,7 @@
 - add SEARCH_BASE configuration option.
 - work around segv at exit due to libxml2 tsd usage.
 - re-read config on HUP signal.
+- add LDAP_URI, LDAP_TIMEOUT and LDAP_NETWORK_TIMEOUT configuration options.
 
 18/06/2007 autofs-5.0.2
 -----------------------
